--- a/scss/common.scss
+++ b/scss/common.scss
@@ -6,6 +6,7 @@
 // Table of contents
 //
 // - Base
+//   - Base override
 // - Chip
 // - Code
 // - Cooked
@@ -20,6 +21,7 @@
 //   - Suggested topics
 
 @import 'common/base';
+@import 'common/base-override';
 @import 'common/chip';
 @import 'common/code';
 @import 'common/cooked';
