--- a/scss/mixins/_button.scss
+++ b/scss/mixins/_button.scss
@@ -34,6 +34,20 @@
     outline: 0;
   }
 
+  &[disabled],
+  &.disabled {
+    color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light);
+
+    @include focus-hover {
+      background-color: transparent;
+      color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light);
+    }
+
+    &:active {
+      background-color: transparent;
+    }
+  }
+
   &.btn-danger {
     color: unquote('$danger');
 
@@ -77,16 +91,22 @@
     }
   }
 
-  &::before {
-    background-color: $btn-bg-overlay;
-    content: '';
-    display: block;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  &[disabled],
+  &.disabled {
+    background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
+    box-shadow: none;
+
+    @include focus-hover {
+      background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
+    }
+
+    &:active {
+      background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
+    }
+
+    &::before {
+      display: none;
+    }
   }
 
   &.btn-danger {
@@ -107,6 +127,18 @@
       background-color: unquote('$tertiary');
       color: color-dynamic(unquote('$tertiary'));
     }
+  }
+
+  &::before {
+    background-color: $btn-bg-overlay;
+    content: '';
+    display: block;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 }
 
