add styles for disabled buttons

--- a/common/common.scss
+++ b/common/common.scss
@@ -597,6 +597,22 @@ div.poll .btn:active {
 div.poll .btn:focus {
   outline: 0;
 }
+div.poll .btn[disabled], div.poll .btn.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+div.poll .btn[disabled]:focus, div.poll .btn.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  div.poll .btn[disabled]:hover, div.poll .btn.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+div.poll .btn[disabled]:active, div.poll .btn.disabled:active {
+  background-color: transparent;
+}
 div.poll .btn.btn-danger {
   color: $danger;
 }
@@ -1393,6 +1409,22 @@ nav.post-controls .actions button:active {
 nav.post-controls .actions button:focus {
   outline: 0;
 }
+nav.post-controls .actions button[disabled], nav.post-controls .actions button.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+nav.post-controls .actions button[disabled]:focus, nav.post-controls .actions button.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  nav.post-controls .actions button[disabled]:hover, nav.post-controls .actions button.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+nav.post-controls .actions button[disabled]:active, nav.post-controls .actions button.disabled:active {
+  background-color: transparent;
+}
 nav.post-controls .actions button.btn-danger {
   color: $danger;
 }
@@ -1503,10 +1535,6 @@ nav.post-controls .actions button .read-icon::before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   content: 'bookmark';
-}
-
-.fa-thumb-tack.unpinned {
-  padding-left: 0;
 }
 
 .post-menu-area {
@@ -1700,6 +1728,38 @@ nav.post-controls .actions button .read-icon::before {
 #topic-footer-buttons > button.btn:focus {
   outline: 0;
 }
+#topic-footer-buttons div > button.btn[disabled], #topic-footer-buttons div > button.btn.disabled,
+#topic-footer-buttons span > button.btn[disabled],
+#topic-footer-buttons span > button.btn.disabled,
+#topic-footer-buttons > button.btn[disabled],
+#topic-footer-buttons > button.btn.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+#topic-footer-buttons div > button.btn[disabled]:focus, #topic-footer-buttons div > button.btn.disabled:focus,
+#topic-footer-buttons span > button.btn[disabled]:focus,
+#topic-footer-buttons span > button.btn.disabled:focus,
+#topic-footer-buttons > button.btn[disabled]:focus,
+#topic-footer-buttons > button.btn.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  #topic-footer-buttons div > button.btn[disabled]:hover, #topic-footer-buttons div > button.btn.disabled:hover,
+  #topic-footer-buttons span > button.btn[disabled]:hover,
+  #topic-footer-buttons span > button.btn.disabled:hover,
+  #topic-footer-buttons > button.btn[disabled]:hover,
+  #topic-footer-buttons > button.btn.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+#topic-footer-buttons div > button.btn[disabled]:active, #topic-footer-buttons div > button.btn.disabled:active,
+#topic-footer-buttons span > button.btn[disabled]:active,
+#topic-footer-buttons span > button.btn.disabled:active,
+#topic-footer-buttons > button.btn[disabled]:active,
+#topic-footer-buttons > button.btn.disabled:active {
+  background-color: transparent;
+}
 #topic-footer-buttons div > button.btn.btn-danger,
 #topic-footer-buttons span > button.btn.btn-danger,
 #topic-footer-buttons > button.btn.btn-danger {
@@ -1767,18 +1827,44 @@ nav.post-controls .actions button .read-icon::before {
 #topic-footer-buttons > button.btn:active::before {
   opacity: 1;
 }
-#topic-footer-buttons div > button.btn::before,
-#topic-footer-buttons span > button.btn::before,
-#topic-footer-buttons > button.btn::before {
-  background-color: rgba(0, 0, 0, 0.12);
-  content: '';
-  display: block;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+#topic-footer-buttons div > button.btn[disabled], #topic-footer-buttons div > button.btn.disabled,
+#topic-footer-buttons span > button.btn[disabled],
+#topic-footer-buttons span > button.btn.disabled,
+#topic-footer-buttons > button.btn[disabled],
+#topic-footer-buttons > button.btn.disabled {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+#topic-footer-buttons div > button.btn[disabled]:focus, #topic-footer-buttons div > button.btn.disabled:focus,
+#topic-footer-buttons span > button.btn[disabled]:focus,
+#topic-footer-buttons span > button.btn.disabled:focus,
+#topic-footer-buttons > button.btn[disabled]:focus,
+#topic-footer-buttons > button.btn.disabled:focus {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+@media (hover: hover) {
+  #topic-footer-buttons div > button.btn[disabled]:hover, #topic-footer-buttons div > button.btn.disabled:hover,
+  #topic-footer-buttons span > button.btn[disabled]:hover,
+  #topic-footer-buttons span > button.btn.disabled:hover,
+  #topic-footer-buttons > button.btn[disabled]:hover,
+  #topic-footer-buttons > button.btn.disabled:hover {
+    background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+  }
+}
+#topic-footer-buttons div > button.btn[disabled]:active, #topic-footer-buttons div > button.btn.disabled:active,
+#topic-footer-buttons span > button.btn[disabled]:active,
+#topic-footer-buttons span > button.btn.disabled:active,
+#topic-footer-buttons > button.btn[disabled]:active,
+#topic-footer-buttons > button.btn.disabled:active {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+#topic-footer-buttons div > button.btn[disabled]::before, #topic-footer-buttons div > button.btn.disabled::before,
+#topic-footer-buttons span > button.btn[disabled]::before,
+#topic-footer-buttons span > button.btn.disabled::before,
+#topic-footer-buttons > button.btn[disabled]::before,
+#topic-footer-buttons > button.btn.disabled::before {
+  display: none;
 }
 #topic-footer-buttons div > button.btn.btn-danger,
 #topic-footer-buttons span > button.btn.btn-danger,
@@ -1819,6 +1905,19 @@ nav.post-controls .actions button .read-icon::before {
     background-color: $tertiary;
     color: color-dynamic($tertiary);
   }
+}
+#topic-footer-buttons div > button.btn::before,
+#topic-footer-buttons span > button.btn::before,
+#topic-footer-buttons > button.btn::before {
+  background-color: rgba(0, 0, 0, 0.12);
+  content: '';
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 #topic-footer-buttons p {
   line-height: 36px;
@@ -2035,6 +2134,22 @@ nav.post-controls .actions button .read-icon::before {
 .topic-map .buttons .btn:focus {
   outline: 0;
 }
+.topic-map .buttons .btn[disabled], .topic-map .buttons .btn.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+.topic-map .buttons .btn[disabled]:focus, .topic-map .buttons .btn.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  .topic-map .buttons .btn[disabled]:hover, .topic-map .buttons .btn.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+.topic-map .buttons .btn[disabled]:active, .topic-map .buttons .btn.disabled:active {
+  background-color: transparent;
+}
 .topic-map .buttons .btn.btn-danger {
   color: $danger;
 }
@@ -2130,6 +2245,22 @@ nav.post-controls .actions button .read-icon::before {
 }
 .topic-map .link-summary a:focus {
   outline: 0;
+}
+.topic-map .link-summary a[disabled], .topic-map .link-summary a.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+.topic-map .link-summary a[disabled]:focus, .topic-map .link-summary a.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  .topic-map .link-summary a[disabled]:hover, .topic-map .link-summary a.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+.topic-map .link-summary a[disabled]:active, .topic-map .link-summary a.disabled:active {
+  background-color: transparent;
 }
 .topic-map .link-summary a.btn-danger {
   color: $danger;
@@ -2304,6 +2435,22 @@ nav.post-controls .actions button .read-icon::before {
 .topic-meta-data .post-info a:focus {
   outline: 0;
 }
+.topic-meta-data .post-info a[disabled], .topic-meta-data .post-info a.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+.topic-meta-data .post-info a[disabled]:focus, .topic-meta-data .post-info a.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  .topic-meta-data .post-info a[disabled]:hover, .topic-meta-data .post-info a.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+.topic-meta-data .post-info a[disabled]:active, .topic-meta-data .post-info a.disabled:active {
+  background-color: transparent;
+}
 .topic-meta-data .post-info a.btn-danger {
   color: $danger;
 }
@@ -2449,6 +2596,30 @@ nav.post-controls .actions button .read-icon::before {
 .timeline-container .topic-timeline span > button.btn:focus {
   outline: 0;
 }
+.timeline-container .topic-timeline div > button.btn[disabled], .timeline-container .topic-timeline div > button.btn.disabled,
+.timeline-container .topic-timeline span > button.btn[disabled],
+.timeline-container .topic-timeline span > button.btn.disabled {
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+.timeline-container .topic-timeline div > button.btn[disabled]:focus, .timeline-container .topic-timeline div > button.btn.disabled:focus,
+.timeline-container .topic-timeline span > button.btn[disabled]:focus,
+.timeline-container .topic-timeline span > button.btn.disabled:focus {
+  background-color: transparent;
+  color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+}
+@media (hover: hover) {
+  .timeline-container .topic-timeline div > button.btn[disabled]:hover, .timeline-container .topic-timeline div > button.btn.disabled:hover,
+  .timeline-container .topic-timeline span > button.btn[disabled]:hover,
+  .timeline-container .topic-timeline span > button.btn.disabled:hover {
+    background-color: transparent;
+    color: color-chooser(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.26));
+  }
+}
+.timeline-container .topic-timeline div > button.btn[disabled]:active, .timeline-container .topic-timeline div > button.btn.disabled:active,
+.timeline-container .topic-timeline span > button.btn[disabled]:active,
+.timeline-container .topic-timeline span > button.btn.disabled:active {
+  background-color: transparent;
+}
 .timeline-container .topic-timeline div > button.btn.btn-danger,
 .timeline-container .topic-timeline span > button.btn.btn-danger {
   color: $danger;
@@ -2504,17 +2675,34 @@ nav.post-controls .actions button .read-icon::before {
 .timeline-container .topic-timeline span > button.btn:active::before {
   opacity: 1;
 }
-.timeline-container .topic-timeline div > button.btn::before,
-.timeline-container .topic-timeline span > button.btn::before {
-  background-color: rgba(0, 0, 0, 0.12);
-  content: '';
-  display: block;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.timeline-container .topic-timeline div > button.btn[disabled], .timeline-container .topic-timeline div > button.btn.disabled,
+.timeline-container .topic-timeline span > button.btn[disabled],
+.timeline-container .topic-timeline span > button.btn.disabled {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.timeline-container .topic-timeline div > button.btn[disabled]:focus, .timeline-container .topic-timeline div > button.btn.disabled:focus,
+.timeline-container .topic-timeline span > button.btn[disabled]:focus,
+.timeline-container .topic-timeline span > button.btn.disabled:focus {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+@media (hover: hover) {
+  .timeline-container .topic-timeline div > button.btn[disabled]:hover, .timeline-container .topic-timeline div > button.btn.disabled:hover,
+  .timeline-container .topic-timeline span > button.btn[disabled]:hover,
+  .timeline-container .topic-timeline span > button.btn.disabled:hover {
+    background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+  }
+}
+.timeline-container .topic-timeline div > button.btn[disabled]:active, .timeline-container .topic-timeline div > button.btn.disabled:active,
+.timeline-container .topic-timeline span > button.btn[disabled]:active,
+.timeline-container .topic-timeline span > button.btn.disabled:active {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+.timeline-container .topic-timeline div > button.btn[disabled]::before, .timeline-container .topic-timeline div > button.btn.disabled::before,
+.timeline-container .topic-timeline span > button.btn[disabled]::before,
+.timeline-container .topic-timeline span > button.btn.disabled::before {
+  display: none;
 }
 .timeline-container .topic-timeline div > button.btn.btn-danger,
 .timeline-container .topic-timeline span > button.btn.btn-danger {
@@ -2549,6 +2737,18 @@ nav.post-controls .actions button .read-icon::before {
     background-color: $tertiary;
     color: color-dynamic($tertiary);
   }
+}
+.timeline-container .topic-timeline div > button.btn::before,
+.timeline-container .topic-timeline span > button.btn::before {
+  background-color: rgba(0, 0, 0, 0.12);
+  content: '';
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .timeline-container .topic-timeline i.fa {
   opacity: 1;
