--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -172,26 +172,30 @@ $line-height-caption:    1.5 !default;      // 18px
 
 // Button
 
-$btn-bg-dark:           unquote('$tertiary') !default;
-$btn-bg-light:          $light-4 !default;
-$btn-bg-active-dark:    $dark-active !default;
-$btn-bg-active-light:   $light-active !default;
-$btn-bg-hover-dark:     $dark-hover !default;
-$btn-bg-hover-light:    $light-hover !default;
-$btn-bg-overlay:        $black-divider !default;
-$btn-border-radius:     2px !default;
-$btn-box-shadow:        $shadow-2dp !default;
-$btn-box-shadow-active: $shadow-8dp !default;
-$btn-color:             unquote('$primary') !default;
-$btn-height:            36px !default;
-$btn-height-sm:         32px !default;
-$btn-font-size:         14px !default;
-$btn-font-size-sm:      13px !default;
-$btn-font-weight:       500 !default;
-$btn-padding-x:         16px !default;
-$btn-padding-x-sm:      16px !default;
-$btn-padding-y:         (($btn-height - $btn-font-size) / 2) !default;
-$btn-padding-y-sm:      (($btn-height-sm - $btn-font-size-sm) / 2) !default;
+$btn-bg-dark:              unquote('$tertiary') !default;
+$btn-bg-light:             $light-4 !default;
+$btn-bg-active-dark:       $dark-active !default;
+$btn-bg-active-light:      $light-active !default;
+$btn-bg-disabled-dark:     $white-divider !default;
+$btn-bg-disabled-light:    $black-divider !default;
+$btn-bg-hover-dark:        $dark-hover !default;
+$btn-bg-hover-light:       $light-hover !default;
+$btn-bg-overlay:           $black-divider !default;
+$btn-border-radius:        2px !default;
+$btn-box-shadow:           $shadow-2dp !default;
+$btn-box-shadow-active:    $shadow-8dp !default;
+$btn-color:                unquote('$primary') !default;
+$btn-color-disabled-dark:  rgba(0, 0, 0, .3) !default;
+$btn-color-disabled-light: rgba(0, 0, 0, .26) !default;
+$btn-height:               36px !default;
+$btn-height-sm:            32px !default;
+$btn-font-size:            14px !default;
+$btn-font-size-sm:         13px !default;
+$btn-font-weight:          500 !default;
+$btn-padding-x:            16px !default;
+$btn-padding-x-sm:         16px !default;
+$btn-padding-y:            (($btn-height - $btn-font-size) / 2) !default;
+$btn-padding-y-sm:         (($btn-height-sm - $btn-font-size-sm) / 2) !default;
 
 
 
