--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -5,6 +5,7 @@
 // - Dropdown
 // - Hover
 // - Material icons
+// - Progress
 // - Strip unit
 // - Table
 // - Text field
@@ -17,6 +18,7 @@
 @import 'mixins/dropdown';
 @import 'mixins/hover';
 @import 'mixins/material-icons';
+@import 'mixins/progress';
 @import 'mixins/strip-unit';
 @import 'mixins/table';
 @import 'mixins/text-field';
