--- a/common/common.scss
+++ b/common/common.scss
@@ -555,6 +555,13 @@ div.poll li[data-poll-option-id] .fa-check-square-o::before {
   color: $tertiary;
   content: 'check_box';
 }
+div.poll li[data-poll-option-id] .fa-circle-o::before {
+  content: 'radio_button_unchecked';
+}
+div.poll li[data-poll-option-id] .fa-dot-circle-o::before {
+  color: $tertiary;
+  content: 'radio_button_checked';
+}
 div.poll li[data-poll-option-id] .fa-square-o::before {
   content: 'check_box_outline_blank';
 }
