--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -94,6 +94,15 @@ div {
           content: 'check_box';
         }
 
+        .fa-circle-o::before {
+          content: 'radio_button_unchecked';
+        }
+
+        .fa-dot-circle-o::before {
+          color: unquote('$tertiary');
+          content: 'radio_button_checked';
+        }
+
         .fa-square-o::before {
           content: 'check_box_outline_blank';
         }
